--- a/contact.html
+++ b/contact.html
@@ -72,16 +72,37 @@
               Reach out for partnerships, provider integrations, or operational collaboration.
               We’ll respond with a proposal and timeline after reviewing your request.
             </p>
-            <ul style="color:#ff0000;">
-  <li><span style="color:#ff0000;">Company</span> KUKU WORLD</li>
-  <li><span style="color:#ff0000;">Email</span> support@oncasino-999.com</li>
-  <li><span style="color:#ff0000;">Telegram</span>
-    <a href="https://t.me/oncasino777" target="_blank" rel="noreferrer" style="color:#ff0000;">
-      @oncasino777
-    </a>
+<ul>
+  <li>
+    <span style="color:#ff0000;">Company</span>
+    <span style="color:#000000;"> KUKU WORLD</span>
   </li>
-  <li><span style="color:#ff0000;">Website</span> oncasino-999.com</li>
-  <li><span style="color:#ff0000;">Address</span> Sea Urchin Street Town, San Pedro, Ambergris Caye, Belize.</li>
+
+  <li>
+    <span style="color:#ff0000;">Email</span>
+    <span style="color:#000000;"> support@oncasino-999.com</span>
+  </li>
+
+  <li>
+    <span style="color:#ff0000;">Telegram</span>
+    <span style="color:#000000;">
+      <a href="https://t.me/oncasino777" target="_blank" rel="noreferrer" style="color:#000000; text-decoration:none;">
+        @oncasino777
+      </a>
+    </span>
+  </li>
+
+  <li>
+    <span style="color:#ff0000;">Website</span>
+    <span style="color:#000000;"> oncasino-999.com</span>
+  </li>
+
+  <li>
+    <span style="color:#ff0000;">Address</span>
+    <span style="color:#000000;">
+      Sea Urchin Street Town, San Pedro, Ambergris Caye, Belize.
+    </span>
+  </li>
 </ul>
           </div>
         </div>
@@ -162,3 +183,4 @@
 </body>
 
 </html>
+
