--- a/contact.html
+++ b/contact.html
@@ -66,44 +66,19 @@
           <div class="left-text">
             <div class="section-heading">
               <h6>Contact</h6>
-              <h2>Collaborate with Us</h2>
+              <h2>Let’s talk</h2>
             </div>
             <p>
               Reach out for partnerships, provider integrations, or operational collaboration.
               We’ll respond with a proposal and timeline after reviewing your request.
             </p>
-<ul>
-  <li>
-    <span style="color:#ff0000;">Company</span>
-    <span style="color:#000000;"> KUKU WORLD</span>
-  </li>
-
-  <li>
-    <span style="color:#ff0000;">Email</span>
-    <span style="color:#000000;"> support@oncasino-999.com</span>
-  </li>
-
-  <li>
-    <span style="color:#ff0000;">Telegram</span>
-    <span style="color:#000000;">
-      <a href="https://t.me/oncasino777" target="_blank" rel="noreferrer" style="color:#000000; text-decoration:none;">
-        @oncasino777
-      </a>
-    </span>
-  </li>
-
-  <li>
-    <span style="color:#ff0000;">Website</span>
-    <span style="color:#000000;"> oncasino-999.com</span>
-  </li>
-
-  <li>
-    <span style="color:#ff0000;">Address</span>
-    <span style="color:#000000;">
-      Sea Urchin Street Town, San Pedro, Ambergris Caye, Belize.
-    </span>
-  </li>
-</ul>
+            <ul>
+              <li><span>Company</span> KUKU WORLD</li>
+              <li><span>Email</span> support@oncasino-999.com</li>
+              <li><span>Telegram</span> <a href="https://t.me/oncasino777" target="_blank" rel="noreferrer">@oncasino777</a></li>
+              <li><span>Website</span> oncasino-999.com</li>
+              <li><span>Address</span> Sea Urchin Street Town, San Pedro, Ambergris Caye, Belize.</li>
+            </ul>
           </div>
         </div>
 
@@ -122,39 +97,35 @@
               </div>
 
               <div class="col-lg-12" style="margin-top:18px;">
-                <form action="mailto:support@oncasino-999.com" method="GET">
-  <div class="row">
-    <div class="col-lg-6">
-      <fieldset>
-        <input type="text" name="name" id="name" placeholder="Your Name*" autocomplete="on" required>
-      </fieldset>
-    </div>
-    <div class="col-lg-6">
-      <fieldset>
-        <input type="text" name="company" id="company" placeholder="Company / Team*" autocomplete="on" required>
-      </fieldset>
-    </div>
-    <div class="col-lg-12">
-      <fieldset>
-        <input type="email" name="from" id="email" placeholder="Your E-mail*" required>
-      </fieldset>
-    </div>
-    <div class="col-lg-12">
-      <fieldset>
-        <textarea name="body" id="message" placeholder="Tell us what you need (integration, partnership, operations)" required></textarea>
-      </fieldset>
-    </div>
-
-    <!-- subject 고정하고 싶으면 hidden 추가 -->
-    <input type="hidden" name="subject" value="[KUKU WORLD] New Contact Message">
-
-    <div class="col-lg-12">
-      <fieldset>
-        <button type="submit" id="form-submit" class="orange-button">Send Message</button>
-      </fieldset>
-    </div>
-  </div>
-</form>
+                <form id="contact-form" action="mailto:support@oncasino-999.com" method="post" enctype="text/plain">
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <fieldset>
+                        <input type="name" name="name" id="name" placeholder="Your Name*" autocomplete="on" required>
+                      </fieldset>
+                    </div>
+                    <div class="col-lg-6">
+                      <fieldset>
+                        <input type="text" name="surname" id="surname" placeholder="Company / Team*" autocomplete="on" required>
+                      </fieldset>
+                    </div>
+                    <div class="col-lg-12">
+                      <fieldset>
+                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your E-mail*" required="">
+                      </fieldset>
+                    </div>
+                    <div class="col-lg-12">
+                      <fieldset>
+                        <textarea name="message" id="message" placeholder="Tell us what you need (integration, partnership, operations)"></textarea>
+                      </fieldset>
+                    </div>
+                    <div class="col-lg-12">
+                      <fieldset>
+                        <button type="submit" id="form-submit" class="orange-button">Send Message</button>
+                      </fieldset>
+                    </div>
+                  </div>
+                </form>
               </div>
 
             </div>
@@ -181,6 +152,4 @@
   <script src="assets/js/custom.js"></script>
 
 </body>
-
 </html>
-
