--- a/games.html
+++ b/games.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <title>KUKU WORLD — Games</title>
+  <meta name="description" content="KUKU WORLD supports responsible gaming through KYC, AML and player protection measures.">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/fontawesome.css">
   <link rel="stylesheet" href="assets/css/templatemo-lugx-gaming.css">
