--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <title>KUKU WORLD</title>
+  <meta name="description" content="KUKU WORLD is a global B2C iGaming platform delivering secure payments, diverse casino games and responsible gaming operations.">
 
+  <link rel="icon" type="image/png" href="assets/images/kfavicon.png">
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
