--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <title>KUKU WORLD — About Us</title>
-
+  <meta name="description" content="Learn about KUKU WORLD’s licensing, compliance framework and global iGaming operations.">
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
